
$Date$

VEGAN STABLE VERSIONS

Version 1.15-3 (opened 28 May, 2009)

	* merged r832: wrong reference in metaMDS.Rd.
	
	* merged r827: kendall.global: could get wrong counts of ties in
	large data sets.
	
	* merged r823: fixed wrong test of output validity in taxa2dist.
	
	* merged r815: anova.cca(..., by = ) name clash if data were
	indexed with 'i' in fitted model.
	
	* merged r812: ordixyplot mixed x and y axes for biplot arrows and
	env centres.

	* merged r811: orditkplot copes with NA and NaN scores.
	
	* merged r810: ordixyplot failed in constrained ordination (broken
	in r108 in Nov 2007).

Version 1.15-2 (released to CRAN: 15 April, 2009)

	* spantree.Rd: example plots use type = "t". Parallel change with
	pkg/vegan. 

	* nestedtemp.Rd tells that bipartite::nestedness is a direct port
	of BINMATNEST of Rodriquez-Girones & Santamaria. Parallel change
	with pkg/vegan.

	* merged r800 (adonis uses less memory in permutation tests) and
	r802 (example enhanced in adonis.Rd, with formatting).

	* merged r600: Oribatid mites (dataset 'mite') got taxon names. 

	* copied nestednodf.R and print.nestednodf.R from pkg/vegan at
	rev651, updated docs at rev653.

	* merge r788: add "..." to decostand so that stressplot(metaMDS(x,
	dist="gower", trymax=40)) works.

	* merge r790 to 1.15 branch: handle missing values in betadisper.

	* merged r781 and r786  from trunk to 1.15 branch: betadisper 
	bug fix and upgrade to work more nicely with Euclidean 'd'.

	* copied contribdiv from pkg/vegan at rev681 (vegan at rev775). 
	
	* merged rev 755 to 760: mrpp upgrade: group statistics,
	classification strength.
	
	* merged rev 762, 763, 765: better heuristics for detecting
	open-ended dissimilarities (Euclidean, Manhattan) and triggering
	half-change scaling. metaMDS honours 'halfchange'.

	* merged rev532, 596 to ordisurf: returns a grid item of fitted
	surface, and gains option for bubble plots of observed values.

	* merged new beals code by Miquel de Caceres (rev 528:531).
